tests: cicd with maven

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,29 +15,38 @@
        - name: echo
          run: echo Succeeded
 
-# jobs:
-#   test_scanner_parser_lexer:
-#     name: Scanner-Parser-Lexer-Test
-#     continue-on-error: true
-#     runs-on: ubuntu-latest
-#     permissions:
-#       contents: read
-#       packages: write
+ jobs:
+   test_scanner_parser_lexer:
+     name: Scanner-Parser-Lexer-Test
+     continue-on-error: true
+     runs-on: ubuntu-latest
+     permissions:
+       contents: read
+       packages: write
 
-#     steps:
-#       #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
-#       - uses: actions/checkout@v1 
+     steps:
+       #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
+       - uses: actions/checkout@v1
       
-#       #Set up JDK 19
-#       - name: Set up JDK
-#         uses: actions/setup-java@v1
-#         with:
-#           java-version: '19'
+       #Set up JDK
+       - name: Set up JDK
+         uses: actions/setup-java@v1
+         with:
+           java-version: '19'
+
+       #Set up Maven cache
+       - name: Cache Maven packages
+         #This action allows caching dependencies and build outputs to improve workflow execution time.
+         uses: actions/cache@v1
+         with:
+           path: ~/.m2
+           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+           restore-keys: ${{ runner.os }}-m2
           
-#       #Test the application using Maven
-#       - name: Test with Maven
-#         run: mvn -Dtest=scannerparserlexer.SannerParserLexerTest test --file pom.xml
+       #Test the application using Maven
+       - name: Test with Maven
+         run: mvn -Dtest=SannerParserLexerTest test --file pom.xml
         
-#       #Test the application using Maven - all Tests
-#       - name: Test with Maven - all
-#         run: mvn test --file pom.xml
+       #Test the application using Maven - all Tests
+       - name: Test with Maven - all
+         run: mvn test --file pom.xml
