--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,7 +45,7 @@
           
        #Test the application using Maven
        - name: Test with Maven
-         run: mvn -Dtest=SannerParserLexerTest test --file pom.xml
+         run: mvn -Dtest=SannerParserLexerTest -DfailIfNoTests=false test --file pom.xml
         
        #Test the application using Maven - all Tests
        - name: Test with Maven - all
