--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,4 +49,4 @@
         
        #Test the application using Maven - all Tests
        - name: Test with Maven - all
-         run: mvn test --file pom.xml
+         run: mvn -DfailIfNoTests=false test --file pom.xml
