--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,10 +42,10 @@
            path: ~/.m2
            key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
            restore-keys: ${{ runner.os }}-m2
-          
+
        #Test the application using Maven
-       - name: Test with Maven
-         run: mvn -Dtest=SannerParserLexerTest -DfailIfNoTests=false test --file pom.xml
+#       - name: Test with Maven
+#         run: mvn -Dtest=SannerParserLexerTest -DfailIfNoTests=false test --file pom.xml
         
        #Test the application using Maven - all Tests
        - name: Test with Maven - all
