--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,6 +47,6 @@
 #       - name: Test with Maven
 #         run: mvn -Dtest=SannerParserLexerTest -DfailIfNoTests=false test --file pom.xml
         
-       #Test the application using Maven - all Tests
-       - name: Test with Maven - all
-         run: mvn -B -DfailIfNoTests=false test --file pom.xml
+       #Test the application using Maven
+       - name: Test with Maven
+         run: mvn -B test --file pom.xml
