--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@
    test_scanner_parser_lexer:
      name: Tests
      continue-on-error: true
-     runs-on: ubuntu-latest
+     runs-on: windows-latest
      permissions:
        contents: read
        packages: write
