--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,4 +47,12 @@
        - name: Test with Maven
          run: mvn -B test --file pom.xml
          
+       - name: Upload a Build Artifact
+         uses: actions/upload-artifact@v3.1.2
+         with:
+           # Artifact name
+           name: test results
+           # A file, directory or wildcard pattern that describes what to upload
+           path: D:\a\Flompiler\Flompiler\target\surefire-reports
+         
          
