--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 
   <groupId>org.example</groupId>
   <artifactId>Flompiler</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <name>Flompiler</name>
-  <url>http://maven.apache.org</url>
+  <url>https://github.com/Pereki/Flompiler</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
